# rocam

./: CMakeLists.txt  CMakeLists.txt~  package.xml
launch/: ROCAM_track_object~  joy_rocam.launch  track_object_ROCAM.launch  track_object_ROCAM.launch~
msg/: control_cam_msg.msg~  velocity.msg
src/: compute_translation_node.cpp  control_camera_node.cpp  joy_rocam_node.cpp  read_video_stream_node.cpp  track_cam_node.cpp
